// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arbitrary options 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "exclude": Array [
          /\\\\/node_modules\\\\//,
        ],
        "loader": "vue-loader",
        "options": Object {
          "foo": "bar",
        },
        "test": /\\\\\\.vue\\$/,
      },
    ],
  },
  "plugins": Array [],
  "resolve": Object {
    "extensions": Array [
      ".vue",
    ],
  },
}
`;

exports[`custom options 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "exclude": Array [
          /\\\\/node_modules\\\\//,
        ],
        "loader": "vue-loader",
        "options": Object {
          "loaders": Object {
            "css": "css-loader",
          },
        },
        "test": /\\\\\\.vue\\$/,
      },
    ],
  },
  "plugins": Array [],
  "resolve": Object {
    "extensions": Array [
      ".vue",
    ],
  },
}
`;

exports[`default options 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "exclude": Array [
          /\\\\/node_modules\\\\//,
        ],
        "loader": "vue-loader",
        "options": Object {},
        "test": /\\\\\\.vue\\$/,
      },
    ],
  },
  "plugins": Array [],
  "resolve": Object {
    "extensions": Array [
      ".vue",
    ],
  },
}
`;

exports[`extract CSS 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "exclude": Array [
          /\\\\/node_modules\\\\//,
        ],
        "loader": "vue-loader",
        "options": Object {
          "loaders": Object {
            "css": Object {
              "args": Array [
                Object {
                  "fallback": "vue-style-loader",
                  "use": "css-loader",
                },
              ],
              "extractTextPluginMock": true,
            },
          },
        },
        "test": /\\\\\\.vue\\$/,
      },
    ],
  },
  "plugins": Array [],
  "resolve": Object {
    "extensions": Array [
      ".vue",
    ],
  },
}
`;

exports[`extract CSS with less-loader 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "exclude": Array [
          /\\\\/node_modules\\\\//,
        ],
        "loader": "vue-loader",
        "options": Object {
          "loaders": Object {
            "less": Object {
              "args": Array [
                Object {
                  "fallback": "vue-style-loader",
                  "use": "less-loader",
                },
              ],
              "extractTextPluginMock": true,
            },
          },
        },
        "test": /\\\\\\.vue\\$/,
      },
    ],
  },
  "plugins": Array [],
  "resolve": Object {
    "extensions": Array [
      ".vue",
    ],
  },
}
`;

exports[`extract CSS with sass-loader 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "exclude": Array [
          /\\\\/node_modules\\\\//,
        ],
        "loader": "vue-loader",
        "options": Object {
          "loaders": Object {
            "sass": Object {
              "args": Array [
                Object {
                  "fallback": "vue-style-loader",
                  "use": "sass-loader",
                },
              ],
              "extractTextPluginMock": true,
            },
          },
        },
        "test": /\\\\\\.vue\\$/,
      },
    ],
  },
  "plugins": Array [],
  "resolve": Object {
    "extensions": Array [
      ".vue",
    ],
  },
}
`;

exports[`extract CSS with stylus-loader 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "exclude": Array [
          /\\\\/node_modules\\\\//,
        ],
        "loader": "vue-loader",
        "options": Object {
          "loaders": Object {
            "stylus": Object {
              "args": Array [
                Object {
                  "fallback": "vue-style-loader",
                  "use": "stylus-loader",
                },
              ],
              "extractTextPluginMock": true,
            },
          },
        },
        "test": /\\\\\\.vue\\$/,
      },
    ],
  },
  "plugins": Array [],
  "resolve": Object {
    "extensions": Array [
      ".vue",
    ],
  },
}
`;
